[metadata]
name = HawkesPyLib
description = Python library for simulation and inference of univariate Hawkes processes
author = Simon Grimm
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    HawkesPyLib
install_requires =
    scipy>=1.7
    numba>=0.55
    numpy>=1.21
    matplotlib>=3.5
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=3.9
    tox>=3.24
    coverage>=6.4


[flake8]
max-line-length = 160

