[metadata]
name = HawkesPyLib
version = 0.0.1
description = Python library for simulation and inference of Hawkes processes
author = Simon Grimm
url = https://simbold.github.io/HawkesPyLib/
keywords = hawkes, point-process, hawkes-process
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = HawkesPyLib
install_requires =
    scipy>=1.7
    numba>=0.55
    numpy>=1.21
python_requires = >=3.8
zip_safe = no

[options.extras_require]
testing =
    flake8>=3.9
    tox>=3.24
    coverage>=6.4


[flake8]
max-line-length = 160

